# dash-template

./: .gitignore  LICENSE  README.md  app.py  docker-compose.yaml  dockerfile  entry.sh  logging.conf  pyproject.toml
.github/workflows/: tests.yml
src/: configs.py
src/assets/locales/: de.json
src/assets/sass/: README.md  style.scss  variables.scss
src/assets/scripts/: callbacks.js
src/assets/stylesheets/: style.css  style.css.map  variables.css  variables.css.map
src/components/: __init__.py  named_component.py
src/components/footer/: footer.py
src/components/navbar/: callbacks.py  navbar.py
src/pages/: not_found_404.py
src/pages/home_page/: content.py
src/pages/neuralnetwork_page/: content.py
src/pages/svm_page/: callbacks.py  content.py  figures.py
tests/pages/: test_app.py
