[tool.poetry]
name = "dash-template"
version = "0.1.0"
description = ""
authors = ["Mohammad Saknini <mohammad.saknini@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.17.1"
dash-bootstrap-components = "^1.6.0"
dash-mantine-components = "^0.14.4"
dash-iconify = "^0.1.2"
lorem = "^0.1.1"
gunicorn = "^23.0.0"
waitress = "^3.0.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
dash-daq = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts  = ["-rA", "--no-header", "-v"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
